--- a/crossing/index.html
+++ b/crossing/index.html
@@ -16,6 +16,7 @@
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="src/spawner/vehicle-spawner.js"></script>
   <script src="src/supervisor/manual-supervisor.js"></script>
+  <script src="src/supervisor/auto-supervisor.js"></script>
   <script src="src/visitor/conflict.js"></script>
   <script src="src/visitor/BlockSectionVisitor.js"></script>
   <script src="src/rectangle.js"></script>
