Added preparations for autonomous supervisor

--- a/crossing/index.html
+++ b/crossing/index.html
@@ -15,15 +15,19 @@
   <script src="../p5.js"></script>
   <!-- <script src="../addons/p5.sound.js"></script> -->
   <script src="src/spawner/vehicle-spawner.js"></script>
+  <script src="src/route/random-route-calculator.js"></script>
   <script src="src/supervisor/manual-supervisor.js"></script>
   <script src="src/supervisor/auto-supervisor.js"></script>
   <script src="src/visitor/conflict.js"></script>
+  <script src="src/visitor/occupation.js"></script>
   <script src="src/visitor/BlockSectionVisitor.js"></script>
   <script src="src/rectangle.js"></script>
-  <script src="src/vehicle.js"></script>
+  <script src="src/vehicle/vehicle.js"></script>
+  <script src="src/vehicle/vehicle-factory.js"></script>
   <script src="src/vector.js"></script>
-  <script src="src/lane.js"></script>
-  <script src="src/connection.js"></script>
+  <script src="src/drivable/link.js"></script>
+  <script src="src/drivable/lane.js"></script>
+  <script src="src/drivable/connection.js"></script>
   <script src="src/crossing.js"></script>
   <script src="sketch.js"></script>
 </head>
